# pdf_rag

./: .gitignore  README.md  pyproject.toml
src/: test.py
src/chunking/: base.py  langchain.py  llama.py
src/database/: base.py  qdrant.py
src/embedding/: base.py  fastembed.py
src/llm/: base.py  ollama.py
src/models/: document.py  retrieval.py
src/parsing/: base.py  docling.py
src/pipeline/: ingestion.py  retrieval.py
src/utils/: autodetect_ram.py
