[project]
name = "rag-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.73.1",
    "fastembed",
    "langchain>=1.2.10",
    "langchain-community",
    "langchain-text-splitters>=1.1.1",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "qdrant-client>=1.17.0",
]
